--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "WebGLTest",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "index.html",
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.5.1",
