--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "single"]
+    "quotes": ["error", "single"],
+    "no-console": "off",
+    "no-debugger": "warn"
   }
 }
